--- a/FunctionCallingOAIFunctionary.ipynb
+++ b/FunctionCallingOAIFunctionary.ipynb
@@ -46,7 +46,7 @@
     "import json\n",
     "\n",
     "client = openai.OpenAI(\n",
-    "    api_key = \"sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\", # can be anything\n",
+    "    api_key = \"sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\", #Actual OpenAI Api\n",
     "    base_url = \"http://192.168.1.10:8000/v1\" # NOTE: Replace with IP address and port of your llama-cpp-python server\n",
     ")\n",
     "\n",
