--- a/FunctionCallingOAIFunctionary.ipynb
+++ b/FunctionCallingOAIFunctionary.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "client = openai.OpenAI(\n",
     "    api_key = \"sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\", #Actual OpenAI Api\n",
-    "    base_url = \"http://192.168.1.10:8000/v1\" # NOTE: Replace with IP address and port of your llama-cpp-python server\n",
+    "    base_url = \"http://192.168.1.10:8000/v1\" #OpenAI Endpoint\n",
     ")\n",
     "\n",
     "messages = [{\"role\": \"user\", \"content\": \"What's the weather like in San Francisco, Tokyo, and Paris?\"}]\n",
